--- a/author.html
+++ b/author.html
@@ -72,7 +72,22 @@
     </div>  
   </header>
   <!-- ***** Header Area End ***** -->
+  <main>
+    <div class="container mb-5">
+      <div id="author" class="row">
+      
+        <div class="col-12 col-lg-6 d-flex justify-content-center align-items-center">
+          <img src="assets/images/tigran.jpg" alt="author" id="author-image">
+        </div>
+        <div class="col-12 col-lg-6 d-flex justify-content-center align-items-center flex-column">
+          <h1 class="text-dark text-center mt-5">Tigran Parun Filipov</h1>
+          <h2 class="text-dark text-center mt-2">96/21</h2>
 
+        </div>
+
+    </div>
+  </div>
+  </main>
   <footer>
     <div class="container">
       <div class="row">
