--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.25s">
-          <p class="text-center"><a href="ProPulseDocumentation.pdf">Documentation</a></p>
+          <p class="text-center"><a href="ProPulseDocumentation.pdf"  target="_blank">Documentation</a></p>
           <p>© Copyright 2023 Pro Pulse Co. All Rights Reserved.<p/>
           
         </div>
